@@ -9,11 +9,7 @@ import it.pagopa.pn.deliverypush.dto.ext.delivery.notification.NotificationSende
 import it.pagopa.pn.deliverypush.dto.ext.safestorage.FileDownloadInfoInt;
 import it.pagopa.pn.deliverypush.dto.ext.safestorage.FileDownloadResponseInt;
 import it.pagopa.pn.deliverypush.dto.legalfacts.LegalFactCategoryInt;
-import it.pagopa.pn.deliverypush.dto.legalfacts.LegalFactsIdInt;
-import it.pagopa.pn.deliverypush.dto.timeline.TimelineElementInternal;
-import it.pagopa.pn.deliverypush.dto.timeline.details.NotificationRequestAcceptedDetailsInt;
-import it.pagopa.pn.deliverypush.dto.timeline.details.NotificationViewedDetailsInt;
-import it.pagopa.pn.deliverypush.dto.timeline.details.TimelineElementCategoryInt;
+import it.pagopa.pn.deliverypush.dto.legalfacts.LegalFactsIdIntWithRecIndex;
 import it.pagopa.pn.deliverypush.exceptions.PnNotFoundException;
 import it.pagopa.pn.deliverypush.generated.openapi.server.v1.dto.*;
 import it.pagopa.pn.deliverypush.service.GetLegalFactService;
@@ -32,10 +28,8 @@ import java.io.InputStream;
 import java.math.BigDecimal;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.time.Instant;
 import java.util.Collections;
 import java.util.List;
-import java.util.Set;
 
 import static it.pagopa.pn.deliverypush.exceptions.PnDeliveryPushExceptionCodes.ERROR_CODE_DELIVERYPUSH_NOTFOUND;
 import static org.junit.jupiter.api.Assertions.*;
@@ -45,12 +39,12 @@ import static org.mockito.Mockito.doThrow;
 class GetLegalFactServiceImplTest {
 
     private static final String IUN = "fake_iun";
-    private static final int REC_INDEX = 0;
     private static final String TAX_ID = "tax_id";
-    private static final String KEY = "key";
-    public static final String VERSION_TOKEN = "VERSION_TOKEN";
-    private static final String CONTENT_TYPE = "Content-Type";
-    private static final long CONTENT_LENGTH = 0L;
+    private static final String TAX_ID_2 = "tax_id_2";
+    private static final String GENERAL_KEY_LEGALFACT = "GENERAL_KEY_LEGALFACT";
+    private static final String RECIPIENT_1_KEY_LEGALFACT = "RECIPIENT_1_KEY_LEGALFACT";
+    private static final String RECIPIENT_2_KEY_LEGALFACT = "RECIPIENT_2_KEY_LEGALFACT";
+
     private static final String LEGAL_FACT_ID = "LEGAL_FACT_ID";
 
     private TimelineService timelineService;
@@ -78,33 +72,27 @@ class GetLegalFactServiceImplTest {
     }
 
     @Test
-    void getLegalFactsSuccess() {
-        List<LegalFactListElementV20> legalFactsExpectedResult = Collections.singletonList(LegalFactListElementV20.builder()
-                .iun(IUN)
-                .taxId(TAX_ID)
-                .legalFactsId(LegalFactsIdV20.builder()
-                        .key(KEY)
-                        .category(LegalFactCategoryV20.RECIPIENT_ACCESS)
-                        .build()
-                ).build()
+    void getLegalFacts_nonPA_returnsFilteredLegalFacts() {
+        List<LegalFactListElementV20> legalFactsExpectedResult = List.of(
+                LegalFactListElementV20.builder()
+                    .iun(IUN)
+                    .taxId(null)
+                    .legalFactsId(LegalFactsIdV20.builder()
+                            .key(GENERAL_KEY_LEGALFACT)
+                            .category(LegalFactCategoryV20.SENDER_ACK)
+                            .build()
+                    ).build(),
+                LegalFactListElementV20.builder()
+                        .iun(IUN)
+                        .taxId(TAX_ID)
+                        .legalFactsId(LegalFactsIdV20.builder()
+                                .key(RECIPIENT_1_KEY_LEGALFACT)
+                                .category(LegalFactCategoryV20.RECIPIENT_ACCESS)
+                                .build()
+                        ).build()
         );
-
-        Set<TimelineElementInternal> timelineElementsResult = Collections.singleton(TimelineElementInternal.builder()
-                .iun(IUN)
-                .details(NotificationViewedDetailsInt.builder()
-                        .recIndex(0)
-                        .build())
-                .category(TimelineElementCategoryInt.NOTIFICATION_VIEWED)
-                .elementId("element_id")
-                .legalFactsIds(Collections.singletonList(LegalFactsIdInt.builder()
-                        .key(KEY)
-                        .category(LegalFactCategoryInt.RECIPIENT_ACCESS)
-                        .build())
-                ).build()
-        );
-
-        Mockito.when(timelineService.getTimeline(anyString(), anyBoolean()))
-                .thenReturn(timelineElementsResult);
+        String mandateId = null;
+        CxTypeAuthFleet cxType = CxTypeAuthFleet.PF;
 
         NotificationRecipientInt recipientInt = NotificationRecipientInt.builder()
                 .taxId(TAX_ID)
@@ -116,27 +104,36 @@ class GetLegalFactServiceImplTest {
                 .withNotificationRecipient(recipientInt)
                 .build();
 
-        Mockito.when(notificationService.getNotificationByIun(anyString()))
-                .thenReturn(notification);
-
+        Mockito.when(notificationService.getNotificationByIun(anyString())).thenReturn(notification);
+        Mockito.when(authUtils.checkUserPaAndMandateAuthorizationAndRetrieveRealRecipientId(any(), anyString(), any(), any(), any())).thenReturn(recipientInt.getInternalId());
+        Mockito.when(notificationUtils.getRecipientIndexFromInternalId(any(), anyString())).thenReturn(0);
         Mockito.when(notificationUtils.getRecipientFromIndex(Mockito.any(NotificationInt.class), Mockito.anyInt()))
                 .thenReturn(recipientInt);
 
-        Mockito.when(authUtils.checkUserPaAndMandateAuthorizationAndRetrieveRealRecipientId(Mockito.any(NotificationInt.class), Mockito.anyString(), Mockito.any(), Mockito.any(), Mockito.any()))
-                .thenReturn(TAX_ID + "ANON");
+        LegalFactsIdIntWithRecIndex notificationRelatedLegalFact = LegalFactsIdIntWithRecIndex.builder()
+                .key(GENERAL_KEY_LEGALFACT)
+                .category(LegalFactCategoryInt.SENDER_ACK)
+                .build();
+        LegalFactsIdIntWithRecIndex recipientRelatedLegalFact = LegalFactsIdIntWithRecIndex.builder()
+                .key(RECIPIENT_1_KEY_LEGALFACT)
+                .category(LegalFactCategoryInt.RECIPIENT_ACCESS)
+                .recIndex(0)
+                .build();
+        Mockito.when(timelineService.getLegalFacts(IUN, 0)).thenReturn(List.of(notificationRelatedLegalFact, recipientRelatedLegalFact));
 
-        List<LegalFactListElementV20> result = getLegalFactService.getLegalFacts(IUN, recipientInt.getInternalId(), null, CxTypeAuthFleet.PF, null);
+        List<LegalFactListElementV20> result = getLegalFactService.getLegalFacts(IUN, recipientInt.getInternalId(), mandateId, cxType, null);
 
         assertEquals(legalFactsExpectedResult, result);
     }
 
     @Test
-    void getLegalFactsSuccessFilteredPF() {
+    void getLegalFacts_PA_returnsAllLegalFacts() {
         List<LegalFactListElementV20> legalFactsExpectedResult = List.of(
                 LegalFactListElementV20.builder()
                         .iun(IUN)
+                        .taxId(null)
                         .legalFactsId(LegalFactsIdV20.builder()
-                                .key(KEY+"all")
+                                .key(GENERAL_KEY_LEGALFACT)
                                 .category(LegalFactCategoryV20.SENDER_ACK)
                                 .build()
                         ).build(),
@@ -144,181 +141,83 @@ class GetLegalFactServiceImplTest {
                         .iun(IUN)
                         .taxId(TAX_ID)
                         .legalFactsId(LegalFactsIdV20.builder()
-                                .key(KEY)
+                                .key(RECIPIENT_1_KEY_LEGALFACT)
+                                .category(LegalFactCategoryV20.RECIPIENT_ACCESS)
+                                .build()
+                        ).build(),
+                LegalFactListElementV20.builder()
+                        .iun(IUN)
+                        .taxId(TAX_ID_2)
+                        .legalFactsId(LegalFactsIdV20.builder()
+                                .key(RECIPIENT_2_KEY_LEGALFACT)
                                 .category(LegalFactCategoryV20.RECIPIENT_ACCESS)
                                 .build()
                         ).build()
         );
+        String mandateId = null;
+        CxTypeAuthFleet cxType = CxTypeAuthFleet.PA;
 
-        Set<TimelineElementInternal> timelineElementsResult = Set.of(TimelineElementInternal.builder()
-                .iun(IUN)
-                .details(NotificationViewedDetailsInt.builder()
-                        .recIndex(0)
-                        .build())
-                .category(TimelineElementCategoryInt.NOTIFICATION_VIEWED)
-                .elementId("element_id")
-                .timestamp(Instant.EPOCH.plusMillis(100))
-                .legalFactsIds(Collections.singletonList(LegalFactsIdInt.builder()
-                        .key(KEY)
-                        .category(LegalFactCategoryInt.RECIPIENT_ACCESS)
-                        .build())
-                ).build(),
-                TimelineElementInternal.builder()
-                        .iun(IUN)
-                        .details(NotificationViewedDetailsInt.builder()
-                                .recIndex(1)
-                                .build())
-                        .category(TimelineElementCategoryInt.NOTIFICATION_VIEWED)
-                        .elementId("element_id")
-                        .timestamp(Instant.EPOCH.plusMillis(10))
-                        .legalFactsIds(Collections.singletonList(LegalFactsIdInt.builder()
-                                .key(KEY+"1")
-                                .category(LegalFactCategoryInt.RECIPIENT_ACCESS)
-                                .build())
-                        ).build(),
-                TimelineElementInternal.builder()
-                        .iun(IUN)
-                        .details(NotificationRequestAcceptedDetailsInt.builder()
-                                .build())
-                        .category(TimelineElementCategoryInt.REQUEST_ACCEPTED)
-                        .elementId("element_id")
-                        .timestamp(Instant.EPOCH.plusMillis(1))
-                        .legalFactsIds(Collections.singletonList(LegalFactsIdInt.builder()
-                                .key(KEY+"all")
-                                .category(LegalFactCategoryInt.SENDER_ACK)
-                                .build())
-                        ).build()
-        );
-
-        Mockito.when(timelineService.getTimeline(anyString(), anyBoolean()))
-                .thenReturn(timelineElementsResult);
-
-        NotificationRecipientInt recipientInt = NotificationRecipientInt.builder()
+        NotificationRecipientInt recipient1Int = NotificationRecipientInt.builder()
                 .taxId(TAX_ID)
                 .internalId(TAX_ID + "ANON")
                 .build();
-        NotificationRecipientInt recipientInt1 = NotificationRecipientInt.builder()
-                .taxId(TAX_ID+"1")
-                .internalId(TAX_ID + "ANON1")
+
+        NotificationRecipientInt recipient2Int = NotificationRecipientInt.builder()
+                .taxId(TAX_ID_2)
+                .internalId(TAX_ID_2 + "ANON")
                 .build();
 
         NotificationInt notification = NotificationTestBuilder.builder()
                 .withIun(IUN)
-                .withNotificationRecipients(List.of(recipientInt, recipientInt1))
+                .withNotificationRecipients(List.of(recipient1Int, recipient2Int))
                 .build();
 
-        Mockito.when(notificationService.getNotificationByIun(anyString()))
-                .thenReturn(notification);
+        Mockito.when(notificationService.getNotificationByIun(anyString())).thenReturn(notification);
+        Mockito.when(authUtils.checkUserPaAndMandateAuthorizationAndRetrieveRealRecipientId(any(), anyString(), any(), any(), any())).thenReturn(notification.getSender().getPaId());
+        Mockito.when(notificationUtils.getRecipientIndexFromInternalId(notification, recipient1Int.getInternalId())).thenReturn(0);
+        Mockito.when(notificationUtils.getRecipientIndexFromInternalId(notification, recipient2Int.getInternalId())).thenReturn(1);
+        Mockito.when(notificationUtils.getRecipientFromIndex(notification, 0))
+                .thenReturn(recipient1Int);
+        Mockito.when(notificationUtils.getRecipientFromIndex(notification, 1))
+                .thenReturn(recipient2Int);
 
-        Mockito.when(notificationUtils.getRecipientFromIndex(Mockito.any(NotificationInt.class), Mockito.anyInt()))
-                .thenReturn(recipientInt);
+        LegalFactsIdIntWithRecIndex notificationRelatedLegalFact = LegalFactsIdIntWithRecIndex.builder()
+                .key(GENERAL_KEY_LEGALFACT)
+                .category(LegalFactCategoryInt.SENDER_ACK)
+                .build();
+        LegalFactsIdIntWithRecIndex recipient1RelatedLegalFact = LegalFactsIdIntWithRecIndex.builder()
+                .key(RECIPIENT_1_KEY_LEGALFACT)
+                .category(LegalFactCategoryInt.RECIPIENT_ACCESS)
+                .recIndex(0)
+                .build();
+        LegalFactsIdIntWithRecIndex recipient2RelatedLegalFact = LegalFactsIdIntWithRecIndex.builder()
+                .key(RECIPIENT_2_KEY_LEGALFACT)
+                .category(LegalFactCategoryInt.RECIPIENT_ACCESS)
+                .recIndex(1)
+                .build();
+        Mockito.when(timelineService.getLegalFacts(IUN, null)).thenReturn(List.of(notificationRelatedLegalFact, recipient1RelatedLegalFact, recipient2RelatedLegalFact));
 
-        Mockito.when(authUtils.checkUserPaAndMandateAuthorizationAndRetrieveRealRecipientId(Mockito.any(NotificationInt.class), Mockito.anyString(), Mockito.any(), Mockito.any(), Mockito.any()))
-                .thenReturn(TAX_ID + "ANON");
-
-
-        List<LegalFactListElementV20> result = getLegalFactService.getLegalFacts(IUN, recipientInt.getInternalId(), null, CxTypeAuthFleet.PF, null);
+        List<LegalFactListElementV20> result = getLegalFactService.getLegalFacts(IUN, notification.getSender().getPaId(), mandateId, cxType, null);
 
         assertEquals(legalFactsExpectedResult, result);
     }
 
     @Test
-    void getLegalFactsSuccessFilteredPA() {
-        List<LegalFactListElementV20> legalFactsExpectedResult = List.of(
-                LegalFactListElementV20.builder()
-                        .iun(IUN)
-                        .legalFactsId(LegalFactsIdV20.builder()
-                                .key(KEY+"all")
-                                .category(LegalFactCategoryV20.SENDER_ACK)
-                                .build()
-                        ).build(),
-                LegalFactListElementV20.builder()
-                        .iun(IUN)
-                        .taxId(TAX_ID)
-                        .legalFactsId(LegalFactsIdV20.builder()
-                                .key(KEY+"1")
-                                .category(LegalFactCategoryV20.RECIPIENT_ACCESS)
-                                .build()
-                        ).build(),
-                LegalFactListElementV20.builder()
-                        .iun(IUN)
-                        .taxId(TAX_ID)
-                        .legalFactsId(LegalFactsIdV20.builder()
-                                .key(KEY)
-                                .category(LegalFactCategoryV20.RECIPIENT_ACCESS)
-                                .build()
-                        ).build()
+    void getLegalFacts_exceptionThrown_logsAndPropagates() {
+        String iun = "IUN";
+        String senderReceiverId = "REC_ID";
+        CxTypeAuthFleet cxType = CxTypeAuthFleet.PF;
+
+        NotificationInt notification = NotificationInt.builder().iun(iun).build();
+
+        Mockito.when(notificationService.getNotificationByIun(anyString())).thenReturn(notification);
+        Mockito.when(authUtils.checkUserPaAndMandateAuthorizationAndRetrieveRealRecipientId(any(), anyString(), any(), any(), any())).thenReturn(senderReceiverId);
+        Mockito.when(notificationUtils.getRecipientIndexFromInternalId(any(), anyString())).thenReturn(0);
+        Mockito.when(timelineService.getLegalFacts(anyString(), any())).thenThrow(new RuntimeException("Test Exception"));
+
+        assertThrows(RuntimeException.class, () ->
+                getLegalFactService.getLegalFacts(iun, senderReceiverId, null, cxType, null)
         );
-
-        Set<TimelineElementInternal> timelineElementsResult = Set.of(TimelineElementInternal.builder()
-                        .iun(IUN)
-                        .details(NotificationViewedDetailsInt.builder()
-                                .recIndex(0)
-                                .build())
-                        .category(TimelineElementCategoryInt.NOTIFICATION_VIEWED)
-                        .elementId("element_id")
-                        .timestamp(Instant.EPOCH.plusMillis(100))
-                        .legalFactsIds(Collections.singletonList(LegalFactsIdInt.builder()
-                                .key(KEY)
-                                .category(LegalFactCategoryInt.RECIPIENT_ACCESS)
-                                .build())
-                        ).build(),
-                TimelineElementInternal.builder()
-                        .iun(IUN)
-                        .details(NotificationViewedDetailsInt.builder()
-                                .recIndex(0)
-                                .build())
-                        .category(TimelineElementCategoryInt.NOTIFICATION_VIEWED)
-                        .elementId("element_id")
-                        .timestamp(Instant.EPOCH.plusMillis(10))
-                        .legalFactsIds(Collections.singletonList(LegalFactsIdInt.builder()
-                                .key(KEY+"1")
-                                .category(LegalFactCategoryInt.RECIPIENT_ACCESS)
-                                .build())
-                        ).build(),
-                TimelineElementInternal.builder()
-                        .iun(IUN)
-                        .details(NotificationRequestAcceptedDetailsInt.builder()
-                                .build())
-                        .category(TimelineElementCategoryInt.REQUEST_ACCEPTED)
-                        .elementId("element_id")
-                        .timestamp(Instant.EPOCH.plusMillis(1))
-                        .legalFactsIds(Collections.singletonList(LegalFactsIdInt.builder()
-                                .key(KEY+"all")
-                                .category(LegalFactCategoryInt.SENDER_ACK)
-                                .build())
-                        ).build()
-        );
-
-        Mockito.when(timelineService.getTimeline(anyString(), anyBoolean()))
-                .thenReturn(timelineElementsResult);
-
-        NotificationRecipientInt recipientInt = NotificationRecipientInt.builder()
-                .taxId(TAX_ID)
-                .internalId(TAX_ID + "ANON")
-                .build();
-        NotificationRecipientInt recipientInt1 = NotificationRecipientInt.builder()
-                .taxId(TAX_ID+"1")
-                .internalId(TAX_ID + "ANON1")
-                .build();
-
-        NotificationInt notification = NotificationTestBuilder.builder()
-                .withIun(IUN)
-                .withNotificationRecipients(List.of(recipientInt, recipientInt1))
-                .build();
-
-        Mockito.when(notificationService.getNotificationByIun(anyString()))
-                .thenReturn(notification);
-
-        Mockito.when(notificationUtils.getRecipientFromIndex(Mockito.any(NotificationInt.class), Mockito.anyInt()))
-                .thenReturn(recipientInt);
-
-        Mockito.when(authUtils.checkUserPaAndMandateAuthorizationAndRetrieveRealRecipientId(Mockito.any(NotificationInt.class), Mockito.anyString(), Mockito.any(), Mockito.any(), Mockito.any()))
-                .thenReturn("PARECIPIENTID");
-
-        List<LegalFactListElementV20> result = getLegalFactService.getLegalFacts(IUN, recipientInt.getInternalId(), null, CxTypeAuthFleet.PA, null);
-
-        assertEquals(legalFactsExpectedResult, result);
     }
 
     @Test
